styles.css
body{
    font-family: 'Roboto Condensed', sans-serif;
    box-sizing: border-box;
    background-color: rgb(247, 200, 245);
    
}

a, .signup-area{
    text-decoration: none;
    color: aliceblue;
}

ul{
    list-style: none;
}

.break {
    flex-basis: 100%;
    height: 0;
}


.section-1{
    display: flex;
    flex:1 0 1;
    justify-content: space-between;
    flex-wrap: wrap;
    margin-left: 500px;
    margin-right: 500px;
    margin-top: -30px;
    background-color: rgb(86, 92, 184);
    padding: 30px;
    border-radius: 15px;
}

.logo-and-text{
    font-size: 24px;
    color: rgb(242, 233, 245);
    display: flex;
    align-content: center;
    gap: 30px;
}

.logo-image{
    width: 80px;
    height: 80px;
}

.header-links{
    font-size: 24px;
    display: flex;
    align-items: center;
    gap: 20px;
}

.signup-block{
    margin-top: 50px;
    flex-wrap: wrap;
}

.hero-text{
    font-size: 75px;
    font-weight: 2000;
    color: aliceblue
}

.signup-text{
    font-size: 25px;
    width: 850px;
    flex-wrap: wrap;
    font-weight: 500;
    margin-top: -70px;
    margin-bottom: -18px;
}

.signup-button{
    width: 140px;
    font-size: 22px;
    padding: 8px;
    text-align: center;
    border-radius: 20px;
    background-color: rgb(255, 143, 251);
    color: black;
    font-weight: 500;
    flex-wrap: wrap;
    
    
}

.landscape-image{
    width: 600px;
    height: auto;
    margin-top: 60px
    
}

